# mini-borg

./: .bazelrc  .clang-format  .env.example  .gitignore  DESIGN.md  Dockerfile  MODULE.bazel  README.md  docker-compose.yml  init.sql  pom.xml  schema.sql
src/client/: BUILD  job_submitter.cc
src/main/java/gateway/: BUILD  GatewayApplication.java  JobSubmissionDto.java
src/master/: BUILD  coordinator_service.cc  coordinator_service.h  coordinator_test.cc  job_store.h  master_server.cc  mock_job_store.h  postgres_job_store.cc  postgres_job_store.h
src/proto/: BUILD  scheduler.proto
src/worker/: BUILD  worker_client.cc  worker_client.h  worker_main.cc
