module(
    name = "miniborg",
    version = "0.0.1",
)

# 1. Essential C++ Rules
bazel_dep(name = "rules_cc", version = "0.1.0")

# 2. Protobuf
bazel_dep(name = "protobuf", version = "27.3", repo_name = "com_google_protobuf")

# 3. gRPC
bazel_dep(name = "grpc", version = "1.66.0", repo_name = "com_github_grpc_grpc")

# 4. Rules Proto - FORCED DOWNGRADE
# rules version 7.x was interfering with grpc causing build errors
bazel_dep(name = "rules_proto", version = "6.0.0")

bazel_dep(name = "googletest", version = "1.15.2")

single_version_override(
    module_name = "rules_proto",
    version = "6.0.0",
)

# 5. Build Crash Fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

single_version_override(
    module_name = "grpc-java",
    version = "1.66.0",
)