module(
    name = "miniborg",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "rules_java", version = "7.6.1") 
bazel_dep(name = "protobuf", version = "27.3", repo_name = "com_google_protobuf")

bazel_dep(name = "grpc", version = "1.66.0", repo_name = "com_github_grpc_grpc")

# Rules Proto - FORCED DOWNGRADE
# rules version 7.x was interfering with grpc causing build errors
bazel_dep(name = "rules_proto", version = "6.0.0")

bazel_dep(name = "googletest", version = "1.15.2")

single_version_override(
    module_name = "rules_proto",
    version = "6.0.0",
)

# Build Crash Fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bazel_dep(name = "grpc-java", version = "1.66.0", repo_name = "io_grpc_grpc_java")

bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.2.2",
        "org.springframework.boot:spring-boot-loader:3.2.2",
        "org.springframework.boot:spring-boot-autoconfigure:3.2.2",
        "org.springframework.boot:spring-boot:3.2.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")